<resources>
    <string name="app_name">Mi zona U Tadeo</string>
    <string name="bienvenida">BIENVENIDO A \n    MI ZONA</string>
    <string name="init_sesión">Iniciar sesión</string>
    <string name="registro1">¿No tienes una cuenta?</string>
    <string name="registro2">Regístrate</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="escribe">Escribe aquí...</string>
    <string name="olvidar">Restablecer contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña_check">Verifica tu contraseña</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="bienvenido_u">Bienvenido</string>
    <string name="horario">Horario</string>
    <string name="enviar_codigo">Enviar código de confirmación</string>
    <string name="contra_recuperada">Su contraseña ha sido recuperada exitosamente</string>
    <string name="back_">Regresar al inicio</string>
    <string name="contraseña_reset_done">Su contraseña ha sido recuperada exitosamente</string>
    <string name="bien_back">Bienvenido de nuevo</string>
    <string name="map">Mapa</string>
    <string name="Servicios">Servicios</string>
    <string name="Solucion_de_problemas">Solucion de problemas</string>
    <string name="Contactanos_aqui">Contactanos</string>
    <string name="Soporte">Soporte</string>
    <string name="Mi_cuenta">Mi cuenta</string>
    <string name="Informe_de_errores_y_asistencia_tecnica">Informe de errores</string>
    <string name="Tienes_problemas_con_tu_cuenta">Tienes problemas con tu cuenta</string>
    <string name="Restablecer_contrasena_aqui">Restablece contraseña</string>
    <string name="Sugerencias">Sugerencias</string>
    <string name="Tienes_alguna_sugerencia">Tienes sugerencias</string>
    <string name="Envia_tus_comentarios_aqui">Envia tus comentarios aqui</string>
    <string name="Restablece_tu_contrasena_aqui">Restablece tu contraseña aqui</string>
    <string name="Historial">Historial</string>
    <string name="Quieres_ver_tu_historial">Quieres ver tu historial</string>
    <string name="Consulta_tu_historial_aqui">Consulta tu historial aqui</string>
    <string name="Reporte_de_errores_y_asistencia_tecnica">Reporte de errores y asistencia tecnica</string>

</resources>