<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_fondo"
        tools:context=".MainActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView2"
            android:layout_width="212dp"
            android:layout_height="202dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:srcCompat="@mipmap/logo" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/back1"
            android:layout_width="43dp"
            android:layout_height="49dp"
            android:backgroundTint="@color/fondo_claro"
            android:drawableTop="@drawable/ic_arrow"
            android:padding="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/baloo"
            android:text="@string/email"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="@+id/Email"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_rounded"
            android:elevation="8dp"
            android:hint="@string/escribe"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/baloo"
            android:text="@string/contraseña"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="@+id/contraseña_user"
            app:layout_constraintTop_toBottomOf="@+id/Email" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo"
            android:text="@string/olvidar"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_init" />

        <EditText
            android:id="@+id/contraseña_user"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_rounded"
            android:elevation="8dp"
            android:hint="@string/escribe"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/show_password"
            android:focusable="true"
            android:src="@drawable/ic_eye_closed"
            app:layout_constraintBottom_toBottomOf="@id/contraseña_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contraseña_user"
            app:layout_constraintTop_toTopOf="@id/contraseña_user"
            app:layout_constraintVertical_bias="0.5" />
        <Button
            android:id="@+id/boton_init"
            android:layout_width="173dp"
            android:layout_height="69dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/fondo_oscuro"
            android:text="@string/init_sesión"
            android:textColor="@color/black"
            android:textSize="17sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseña_user" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
